Bug 405527 - No operation on Vault works when device path contains a symbolic link
Summary: No operation on Vault works when device path contains a symbolic link
Status: RESOLVED FIXED
Alias: None
Product: Plasma Vault
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-16 15:36 UTC by ultr
Modified: 2019-03-23 17:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ultr 2019-03-16 15:36:34 UTC
SUMMARY
No operation on Vault (mount, umount, settings, removal) works when device path contains a symbolic link.

STEPS TO REPRODUCE
1. Create a new Vault
2. Enter some name
3. Enter a password
4. For encrypted data location enter a path that contains a directory which is a symlink (!)
5. For mounting point enter any directory (this works fine with symlinks)
6. Confirm creation of the new Vault

OBSERVED RESULT
Try using tray Vault interface to operate on the newly created vault - all actions will fail.
Also operations executed via DBUS calls fail.

EXPECTED RESULT
Vaults with symlinks in their device paths should work.

SOFTWARE/OS VERSIONS
Operating System: Ubuntu 18.10
KDE Plasma Version: 5.15.3
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.1
Comment 1 Ivan Čukić 2019-03-23 17:46:46 UTC
Git commit dc21669bba0351291bd9baa7e0e2029c4fdbd093 by Ivan Cukic.
Committed on 23/03/2019 at 17:45.
Pushed by ivan into branch 'master'.

Never use non-resolved paths for mounts and devices

M  +7    -7    kded/engine/backends/cryfs/cryfsbackend.cpp
M  +3    -3    kded/engine/backends/encfs/encfsbackend.cpp
M  +5    -5    kded/engine/fusebackend_p.cpp
M  +2    -2    kded/engine/types.cpp
M  +2    -12   kded/engine/types.h
M  +6    -6    kded/engine/vault.cpp
M  +1    -1    kded/engine/vault.h
M  +11   -11   kded/service.cpp
M  +2    -2    kded/ui/vaultconfigurationdialog.cpp

https://commits.kde.org/plasma-vault/dc21669bba0351291bd9baa7e0e2029c4fdbd093