Never use non-resolved paths for mounts and devices

BUG:405527