kded/engine/vault.h
@@ -51,8 +51,8 @@ class Vault: public QObject {
     Q_OBJECT
 
     Q_PROPERTY(PlasmaVault::Device device READ device)
+    Q_PROPERTY(PlasmaVault::MountPoint mountPoint READ mountPoint NOTIFY mountPointChanged)
 
-    Q_PROPERTY(QString mountPoint       READ mountPoint NOTIFY mountPointChanged)
     Q_PROPERTY(VaultInfo::Status status READ status     NOTIFY statusChanged)
 
     Q_PROPERTY(bool isInitialized READ isInitialized NOTIFY isInitializedChanged)
